# berea

./: Makefile  README.md  app.py  pyproject.toml  query.py
berea/: bible.py  cli.py  render.py
biblecli/: bible.py  cli.py  query.py  utils.py
biblecli/data/: book_abbreviations.json  step_bible_books.csv
tests/: conftest.py  test_bible.py  test_cli.py  test_query.py  test_render.py
