[project]
name = "berea"
description = "Berea: A CLI for studying Scripture."
authors = [
    {name = "Jamie Stadnik"},
]
readme = "README.md"
requires-python = ">=3.8"
# TODO: add scripture, verse, reference, lookup, search, find, download, translation
keywords = ["bible", "cli"]
license = {text = "BSD-3-Clause"}  # TODO: Update this
# TODO: Is this needed?
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.scripts]
bible = "berea.cli:main"

# TODO: Add hatch/hatchling
[project.optional-dependencies]
dev = [
    "pytest>=7.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "berea/cli.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"

# BUG: pip uninstall does not remove translations or config
